fixed   white-space: nowrap

--- a/src/App.css
+++ b/src/App.css
@@ -94,27 +94,37 @@ a:active {
   height:130px;
   padding: 10px;
   padding-bottom: 20px;
-  overflow: scroll;
-  text-decoration: none;
-
+ 
 }
 
 .desc h2{
   font-size: 1em;
   font-weight: 400;
   text-decoration: none;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .desc h3{
   font-size: .8em;
   font-weight: 300;
   text-decoration: none;
+  text-overflow: ellipsis;
+  max-lines: 2;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .desc p{
   font-size: .5em;
   font-weight: 300;
   text-decoration: none;
+  max-lines: 2;
+  overflow: hidden;
+  white-space: nowrap;
+  
+
 }
 
 @keyframes App-logo-spin {
